fix(client): Support running Gravitino client on JDK8
Replace JDK9+ and JDK11+ APIs with JDK8-compatible equivalents:
- Replace `Map.of()` (Java 9+) with `ImmutableMap.of()` or `Collections.emptyMap()`
- Replace `Optional.isEmpty()` (Java 11+) with `!Optional.isPresent()`
- Replace `Stream.toList()` (Java 16+) with `.collect(Collectors.toList())`
- Replace `@Deprecated(since = "...")` (Java 9+) with plain `@Deprecated`
- Exclude `.backport-worktrees/` from Apache RAT license check

Fixes #10373

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>